--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,21 @@
 <header class="header">
-	<div class="header__container">
+	<div class="header__container-big">
+		<a href="" class="header__logo"><img src="@img/logo.svg" alt="Logo"></a>
+		<div class="header__menu menu">
+			<nav class="menu__body">
+				<ul class="menu__list">
+					<li class="menu__item"><a href="" class="menu__link">Home</a></li>
+					<li class="menu__item"><a href="" class="menu__link">About</a></li>
+					<li class="menu__item"><a href="" class="menu__link">Features</a></li>
+					<li class="menu__item"><a href="" class="menu__link">How it works</a></li>
+				</ul>
+			</nav>
+		</div>
+		<div class="header__actions">
+			<button type="button" class="header__button button button_border">Sign In</button>
+			<!-- Перемещение кнопки time 59:30 app.js стр198-->
+			<button type="button" data-da=".menu__body,767.98" class="header__button button">Get Started</button> 
+			<button type="button" class="icon-menu"><span></span></button>
+		</div>
 	</div>
 </header>
