--- a/src/home.html
+++ b/src/home.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 	@@include('html/_head.htm',{
-	"title":"Главная"
+	"title":"FarmVest"
 	})
 	<body>
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
 			<main class="page">
-				ghbbfdghfrshh
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
