закончил секцию how

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,6 @@
-<header class="header"> 
+<!-- ? добавления классов к хедеру при прокрутке->
+<!-- ? Расскоментировать стр171 в app.js-->
+<header class="header">
 	<div class="header__container-big">
 		<a href="" class="header__logo"><img src="@img/logo.svg" alt="Logo"></a>
 		<div class="header__menu menu">
@@ -13,8 +15,8 @@
 		</div>
 		<div class="header__actions">
 			<button type="button" class="header__button button button_border">Sign In</button>
-			<!-- Перемещение кнопки time 59:30 app.js стр198-->
-			<button type="button" data-da=".menu__body,767.98" class="header__button button">Get Started</button> 
+			<!-- Перемещение кнопки time 59:30 app.js стр198 - динамический адаптив-->
+			<button type="button" data-da=".menu__body,767.98" class="header__button button">Get Started</button>
 			<button type="button" class="icon-menu"><span></span></button>
 		</div>
 	</div>
