--- a/src/home.html
+++ b/src/home.html
@@ -8,6 +8,7 @@
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main class="page">
+			<!-- ! Time 01:20:00 -->
 			<section class="page__main main-block">
 				<div data-prlx-parent class="main-block__container-big">
 					<div class="main-block__container">
@@ -20,7 +21,7 @@
 								tincidunt. Ut arcu, suscipit ac etLorem ipsum dolor sit amet.Lorem ipsum dolor sit amet,
 								consectetur
 							</div>
-							<!-- ! Time 11:00 -->
+							<!-- ! Time 11:00 часть 2-->
 							<!-- ? Есть сниппет form в form.scss -->
 							<!-- ? Расскоментировать стр79 в app.js, чтобы пропадал placeholder -->
 							<!-- ? Расскоментировать стр87 в app.js, чтобы email мог пройти валидацию  -->
@@ -32,32 +33,33 @@
 								</form>
 							</div>
 						</div>
-						<!-- ! Time 52:05 -->
+						<!-- ! Time 52:05 часть 2-->
 						<!-- ? Расскоментировать стр 69 в app.js, чтобы появился Модуль параллакса мышью -->
-						<!-- ? Расскоментировать стр 171 в app.js, чтобы появился Модуль поекранной прокрутки -->
+						<!-- ? Расскоментировать стр 171 в app.js, чтобы появился Модуль поэкранной прокрутки -->
+						<!-- ? Чтобы иконки двигались в разные строны меняем ось через одну data-prlx-dxr data-prlx-dyr-->
 						<div data-coefficient="100" data-prlx data-direction="1"
 							class="main-block__icons icons-main-block">
 							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300"
 								class="icons-main-block__circle icons-main-block__circle_1"></div>
 							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr
 								class="icons-main-block__circle icons-main-block__circle_2"></div>
-							<div data-prlx-mouse data-prlx-cx="10" data-prlx-cy="10"
+							<div data-prlx-mouse data-prlx-cx="15" data-prlx-cy="15"
 								class="icons-main-block__item icons-main-block__item_1">
 								<img src="@img/main-block/icons/01.svg" alt="Icon">
 							</div>
-							<div data-prlx-mouse data-prlx-cx="10" data-prlx-cy="10" data-prlx-dxr data-prlx-dyr
+							<div data-prlx-mouse data-prlx-cx="15" data-prlx-cy="15" data-prlx-dxr data-prlx-dyr
 								class="icons-main-block__item icons-main-block__item_2">
 								<img src="@img/main-block/icons/02.svg" alt="Icon">
 							</div>
-							<div data-prlx-mouse data-prlx-cx="10" data-prlx-cy="10"
+							<div data-prlx-mouse data-prlx-cx="15" data-prlx-cy="15"
 								class="icons-main-block__item icons-main-block__item_3">
 								<img src="@img/main-block/icons/03.svg" alt="Icon">
 							</div>
-							<div data-prlx-mouse data-prlx-cx="10" data-prlx-cy="10" data-prlx-dxr data-prlx-dyr
+							<div data-prlx-mouse data-prlx-cx="15" data-prlx-cy="15" data-prlx-dxr data-prlx-dyr
 								class="icons-main-block__item icons-main-block__item_4">
 								<img src="@img/main-block/icons/04.svg" alt="Icon">
 							</div>
-							<div data-prlx-mouse data-prlx-cx="10" data-prlx-cy="10"
+							<div data-prlx-mouse data-prlx-cx="15" data-prlx-cy="15"
 								class="icons-main-block__item icons-main-block__item_5">
 								<img src="@img/main-block/icons/05.svg" alt="Icon">
 							</div>
@@ -65,7 +67,7 @@
 								class="icons-main-block__item icons-main-block__item_6">
 								<img src="@img/main-block/icons/06.svg" alt="Icon">
 							</div>
-							<div data-prlx-mouse data-prlx-cx="10" data-prlx-cy="10"
+							<div data-prlx-mouse data-prlx-cx="15" data-prlx-cy="15"
 								class="icons-main-block__item icons-main-block__item_7">
 								<img src="@img/main-block/icons/07.svg" alt="Icon">
 							</div>
@@ -74,7 +76,7 @@
 				</div>
 			</section>
 			<!-- ! Time 01:28:00 -->
-			<div class="page__partners partners">
+			<section class="page__partners partners">
 				<div class="partners__container-big">
 					<div class="partners__container">
 						<div class="partners__item">
@@ -94,7 +96,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 			<!-- ! Time 01:39:00 -->
 			<section data-prlx-mouse-wrapper class="page__how how">
 				<div class="how__container-big">
@@ -104,7 +106,9 @@
 								How <span>FarmVest</span> Works
 							</h2>
 							<div class="how__text text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu, mollis aenean sit dictum tincidunt. Ut arcu, suscipit ac etLorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu, mollis aenean sit
+									dictum tincidunt. Ut arcu, suscipit ac etLorem ipsum dolor sit amet.Lorem ipsum
+									dolor sit amet, consectetur</p>
 							</div>
 							<div class="how__steps steps-how">
 								<div class="steps-how__item">
@@ -113,7 +117,8 @@
 									</div>
 									<div class="steps-how__body">
 										<div class="steps-how__title">Download FarmVest</div>
-										<div class="steps-how__text text">Start by downloading FarmVest app on your Android or IOS</div>
+										<div class="steps-how__text text">Start by downloading FarmVest app on your
+											Android or IOS</div>
 									</div>
 								</div>
 								<div class="steps-how__item">
@@ -122,7 +127,8 @@
 									</div>
 									<div class="steps-how__body">
 										<div class="steps-how__title">Create account</div>
-										<div class="steps-how__text text">Start by downloading FarmVest app on your Android or IOS</div>
+										<div class="steps-how__text text">Start by downloading FarmVest app on your
+											Android or IOS</div>
 									</div>
 								</div>
 								<div class="steps-how__item">
@@ -131,7 +137,8 @@
 									</div>
 									<div class="steps-how__body">
 										<div class="steps-how__title">Link your bank account</div>
-										<div class="steps-how__text text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+										<div class="steps-how__text text">Start by downloading FarmVest app on your
+											Android or IOS</div>
 									</div>
 								</div>
 								<div class="steps-how__item">
@@ -140,7 +147,8 @@
 									</div>
 									<div class="steps-how__body">
 										<div class="steps-how__title">Start Investing</div>
-										<div class="steps-how__text text">Start by downloading FarmVest app on your Android or IOS</div>
+										<div class="steps-how__text text">Start by downloading FarmVest app on your
+											Android or IOS</div>
 									</div>
 								</div>
 							</div>
@@ -149,8 +157,10 @@
 							<div data-coefficient="50" data-prlx data-direction="-1" class="image-block__item">
 								<img src="@img/how-it-works/image.jpg" alt="Image">
 							</div>
-							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" class="image-block__circle image-block__circle_1"></div>
-							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr class="image-block__circle image-block__circle_2"></div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300"
+								class="image-block__circle image-block__circle_1"></div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr
+								class="image-block__circle image-block__circle_2"></div>
 						</div>
 					</div>
 				</div>
