--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
 			<h1>Верстка «NEW_PROJECT_NAME»</h1>
 			<div class="rootpage__info">
 				Особенности проекта
+				<ol class="rootpage__info-list">
+					<li>Содержит 2 контейнера time 32:40 1</li>
+					<li>Содержимое тэга 2</li>
+					<li>Содержимое тэга 3</li>
+				</ol>
+		
 			</div>
 			<h2>Готовые страницы:</h2>
 			<ol class="rootpage__list">
@@ -21,12 +27,12 @@
 			</ol>
 			<div class="rootpage__tnx">
 				<h2>Спасибо за заказ!</h2>
-				<p>Буду рад (а) хорошему отзыву.</p>
+				<p>Буду рад хорошему отзыву.</p>
 				<p>Обращайтесь еще!</p>
 			</div>
 			<div class="rootpage__contacts">
 				<h2>Мои контакты:</h2>
-				<p>Почта: <a href="mailto:email@gmail.com">email@gmail.com</a></p>
+				<p>Почта: <a href="mailto:lsl330470@gmail.com">lsl330470@gmail.com</a></p>
 				<p>Телефон: <a href="tel:8800800800">8 800 800 800</a></p>
 				<p>Соц. сеть: <a href="">ссылка на соц. сеть</a></p>
 			</div>
@@ -106,16 +112,21 @@
 			margin: 0px 0px 1rem 0px;
 		}
 		@media (max-width: 767px) {
-			 h2 {
+			h2 {
 				font-size: 1.125rem;
 				margin: 0px 0px 1rem 0px;
 			}
 		}
 		.rootpage__info{
+			font-size: 30px;
 			line-height: 140%;
-			margin: 0px 0px 1.5rem 0px;
+			margin: 0px 0px 2.5rem 0px;
 		}
-
+		.rootpage__info-list {
+			font-size: 20px;
+			line-height: 140%;
+			margin: 0px 0px 2.25rem 1.25rem;
+		}
 		.rootpage__list{
 			margin: 0px 0px 2.25rem 1.25rem;
 		}
