закончил секцию pathway

--- a/src/home.html
+++ b/src/home.html
@@ -165,6 +165,61 @@
 					</div>
 				</div>
 			</section>
+			<!-- ! Time 02:19:00 -->
+			<section data-prlx-mouse-wrapper class="page__pathway pathway">
+				<div class="pathway__container-big">
+					<div class="pathway__container">
+						<div data-prlx-parent class="pathway__image image-block">
+							<div data-coefficient="50" data-prlx data-direction="-1" class="image-block__item">
+								<img src="@img/pathway/image.jpg" alt="Image">
+							</div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300"
+								class="image-block__circle image-block__circle_1"></div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr
+								class="image-block__circle image-block__circle_2"></div>
+						</div>
+						<div class="pathway__content">
+							<h2 class="pathway__title title title_s64">
+								Your <span>pathway</span> to Future Investment
+							</h2>
+							<div class="pathway__text text">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu, mollis aenean sit
+									dictum tincidunt. Ut arcu, suscipit ac etLorem ipsum dolor sit amet.Lorem ipsum
+									dolor sit amet, consectetur</p>
+							</div>
+							<!-- ! Time 02:31:00 -->
+							<!-- ? Расскоментировать стр42 в app.js-->
+							<div data-spollers class="pathway__spollers spollers-pathway">
+								<div class="spollers-pathway__item">
+									<button type="button" data-spoller class="spollers-pathway__title">What is
+										FarmVest?</button>
+									<div class="spollers-pathway__body text">Lorem ipsum dolor, sit amet consectetur
+										adipisicing elit. Libero, unde quaerat aperiam vero rem doloremque maxime itaque
+										molestiae corrupti dolor quos non optio laudantium deserunt architecto doloribus
+										quam ullam fugit!</div>
+								</div>
+								<div class="spollers-pathway__item">
+									<button type="button" data-spoller class="spollers-pathway__title">How safe is
+										FarmVest</button>
+									<div class="spollers-pathway__body text">
+										Lorem ipsum dolor, sit amet consectetur
+										adipisicing elit. Libero, unde quaerat aperiam vero rem doloremque maxime itaque
+										molestiae corrupti dolor quos non optio laudantium deserunt architecto doloribus
+										quam ullam fugit!</div>
+								</div>
+								<div class="spollers-pathway__item">
+									<button type="button" data-spoller class="spollers-pathway__title">What do I gain
+										from using FarmVest?</button>
+									<div class="spollers-pathway__body text">Lorem ipsum dolor, sit amet consectetur
+										adipisicing elit. Libero, unde quaerat aperiam vero rem doloremque maxime itaque
+										molestiae corrupti dolor quos non optio laudantium deserunt architecto doloribus
+										quam ullam fugit!</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
 		</main>
 		@@include('html/_footer.htm',{})
