закончил секцию download

--- a/src/home.html
+++ b/src/home.html
@@ -36,7 +36,7 @@
 						<!-- ! Time 52:05 часть 2-->
 						<!-- ? Расскоментировать стр 69 в app.js, чтобы появился Модуль параллакса мышью -->
 						<!-- ? Расскоментировать стр 171 в app.js, чтобы появился Модуль поэкранной прокрутки -->
-						<!-- ? Чтобы иконки двигались в разные строны меняем ось через одну data-prlx-dxr data-prlx-dyr-->
+						<!-- ? Чтобы иконки двигались в разные строны меняем ось через одну data-prlx-dxr data-prlx-dyr time 01:07:00-->
 						<div data-coefficient="100" data-prlx data-direction="1"
 							class="main-block__icons icons-main-block">
 							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300"
@@ -220,7 +220,95 @@
 					</div>
 				</div>
 			</section>
-
+			<!-- ! Time 03:04:00 -->
+			<section data-prlx-mouse-wrapper class="page__why why">
+				<div class="why__container-big">
+					<div class="why__container">
+						<div class="why__content">
+							<h2 class="why__title title title_s64">
+								Why choose <span>FarmVest</span>
+							</h2>
+							<div class="why__text text">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu, mollis aenean sit
+									dictum tincidunt. Ut arcu, suscipit ac</p>
+							</div>
+							<ol class="why__steps steps-why">
+								<li class="steps-why__item">Real-time Checkup</li>
+								<li class="steps-why__item">Flexibility in Investment</li>
+								<li class="steps-why__item">Encrypted and Secured</li>
+								<li class="steps-why__item">Withdraw Anytime</li>
+							</ol>
+							<a href="" type="submit" class="button why__button">Learn More</a>
+						</div>
+						<div data-prlx-parent class="why__image image-block">
+							<div data-coefficient="50" data-prlx data-direction="-1" class="image-block__item">
+								<img src="@img/why/image.jpg" alt="Image">
+							</div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300"
+								class="image-block__circle image-block__circle_1"></div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr
+								class="image-block__circle image-block__circle_2"></div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- ! Time 02:50:00 -->
+			<section class="page__reviews reviews">
+				<div class="reviews__container-big">
+					<div class="reviews__container">
+						<h2 class="reviews__title title">What <span>Customers</span> have to say</h2>
+						<div class="reviews__text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu,
+							mollis aenean sit dictum tincidunt. Ut arcu, suscipit ac</div>
+						<div class="reviews__items">
+							<div class="reviews__item item-review">
+								<div class="item-review__image-ibg">
+									<img src="@img/reviews/01.jpg" alt="Image">
+								</div>
+								<div class="item-review__body">
+									<div class="item-review__text text">Lorem ipsum dolor sit amet, consectetur
+										adipiscing elit. Ut eu, mollis aenean sit dictum tincidunt. Ut arcu, suscipit ac
+									</div>
+									<div class="item-review__name">Tonia Smart</div>
+								</div>
+							</div>
+							<div class="reviews__item item-review">
+								<div class="item-review__image-ibg">
+									<img src="@img/reviews/02.jpg" alt="Image">
+								</div>
+								<div class="item-review__body">
+									<div class="item-review__text text">Lorem ipsum dolor sit amet, consectetur
+										adipiscing elit. Ut eu, mollis aenean sit dictum tincidunt. Ut arcu, suscipit ac
+									</div>
+									<div class="item-review__name">Grace Obi</div>
+								</div>
+							</div>
+						</div>
+						<button type="button" class="reviews__button button">View All</button>
+					</div>
+				</div>
+			</section>
+			<!-- ! Time 03:19:00 -->
+			<section data-prlx-mouse-wrapper class="page__download download">
+				<div class="download__container-big">
+					<div class="download__container">
+						<div class="download__body">
+							<h2 class="download__title title title_s56">
+								Download <span>FarmVest app</span> and invest in your future
+							</h2>
+							<div class="download__apps">
+								<a href="" class="download__app">
+									<img src="@img/icons/store.png" alt="GooglePlay">
+								</a>
+								<a href="" class="download__app">
+									<img src="@img/icons/appstore.png" alt="AppleStore">
+								</a>
+							</div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" class="download__circle download__circle_1"></div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr class="download__circle download__circle_2"></div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
