--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,67 @@
+<!-- ! Time 03:30:00 -->
 <footer class="footer">
-	<div class="footer__container">
+	<div class="footer__container-big">
+		<div class="footer__container">
+			<div class="footer__main main-footer">
+				<div class="main-footer__info">
+					<a href="" class="main-footer__logo">
+						<img src="@img/footer-logo.svg" alt="Logo">
+					</a>
+					<div class="main-footer__text text">High level experience in web design and development knowledge,
+						producing quality work.</div>
+				</div>
+				<div class="main-footer__form form-main">
+					<div class="form-main__text text">Subscribe to stay tuned for new web design and latest updates.
+						Let's do it!</div>
+					<form action="#" class="form-main__form form">
+						<input data-required="email" autocomplete="off" type="text" name="form[]" data-error="Error"
+							placeholder="Enter your email" class="form__input">
+						<button type="submit" class="form__button button">Subscribe</button>
+					</form>
+				</div>
+				<div class="main-footer__contacts">
+					<div class="main-footer__social">
+						<div class="main-footer__label">Follow us</div>
+						<div class="social">
+							<a href="" class="social__item">
+								<img src="@img/icons/social/01.svg" alt="Instagram">
+							</a>
+							<a href="" class="social__item">
+								<img src="@img/icons/social/02.svg" alt="Facebook">
+							</a>
+							<a href="" class="social__item">
+								<img src="@img/icons/social/03.svg" alt="Twitter">
+							</a>
+						</div>
+					</div>
+					<div class="main-footer__call-us">
+						<div class="main-footer__label">Call us</div>
+						<a href="tel:+2349123456789" class="main-footer__phone">+2349123456789</a>
+					</div>
+				</div>
+			</div>
+			<div class="footer__bottom">
+				<div class="footer__copy">© 2021 All Rights Reserved</div>
+				<nav class="footer__menu menu-footer">
+					<ul class="menu-footer__list">
+						<li class="menu-footer__item">
+							<a href="" class="menu-footer__link">Privacy Policy</a>
+						</li>
+						<li class="menu-footer__item">
+							<a href="" class="menu-footer__link">Terms of Use</a>
+						</li>
+						<li class="menu-footer__item">
+							<a href="" class="menu-footer__link">Sales and Refunds</a>
+						</li>
+						<li class="menu-footer__item">
+							<a href="" class="menu-footer__link">Legal</a>
+						</li>
+						<li class="menu-footer__item">
+							<a href="" class="menu-footer__link">Site Map</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 	</div>
 </footer>
