Страница меняет цвет от темы системы светл/темн.

--- a/src/home.html
+++ b/src/home.html
@@ -3,6 +3,10 @@
 @@include('html/_head.htm',{
 "title":"FarmVest"
 })
+<!-- Темная тема по умолчанию -->
+<!--? https://www.youtube.com/playlist?list=PLM6XATa8CAG7KPkSDhROxQJavLd7iNtB9 -->
+<!-- Смена темы на светлую -->
+<!--? https://www.youtube.com/watch?v=B1fLlDTVW8E -->
 
 <body>
 	<div class="wrapper">
