--- a/src/home.html
+++ b/src/home.html
@@ -303,8 +303,10 @@
 									<img src="@img/icons/appstore.png" alt="AppleStore">
 								</a>
 							</div>
-							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" class="download__circle download__circle_1"></div>
-							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr class="download__circle download__circle_2"></div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300"
+								class="download__circle download__circle_1"></div>
+							<div data-prlx-mouse data-prlx-cx="300" data-prlx-cy="300" data-prlx-dxr data-prlx-dyr
+								class="download__circle download__circle_2"></div>
 						</div>
 					</div>
 				</div>
